# ServerTCP_QtNetwork

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: commanddescriptor.h  device.h  server.h
src/: commanddescriptor.cpp  device.cpp  server.cpp
